style.css
/* ... */
/* Critère WCAG 2.4.1 Level A */
.skip-link {
  background: white;
  color: var(--color-blue-400);
  font-weight: 700;
  height: 2.5rem;
  left: calc(50% - 7rem);
  padding: 8px;
  position: absolute;
  text-align: center;
  transform: translateY(-120%);
  transition: transform 0.3s;
  width: 14rem;
}

@media (prefers-reduced-motion: reduce) {
  .skip-link {
    transition: none;
  }
}

/* Montrer le Skip Link sur focus */
.skip-link:focus {
  transform: translateY(0%);
}

/* ==========================================================================
   Container
   ========================================================================== */

.container {
  margin: 0 auto;
  max-width: 100rem;
  padding: var(--padding-container-small);
  width: 100%;
}

@media screen and (min-width: 1200px) {
  .container {
    padding: var(--padding-container-large);
  }
}

.container__title {
  font-size: 2rem;
}

/* ==========================================================================
   General
   ========================================================================== */

@media (pointer: fine) {
  .cursor {
    background-color: var(--color-white);
    border-radius: 50%;
    height: 20px;
    left: -100px;
    mix-blend-mode: difference;
    pointer-events: none;
    position: fixed;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
    transition: all 200ms ease-out;
    width: 20px;
    z-index: 10000;
  }

  .cursor[data-hidden="true"] {
    opacity: 0;
    transform: scale(0.1);
  }
}

.link-viewmore {
  position: relative;
  display: inline-flex;
  align-items: center;
  gap: .4rem;
}

.link-viewmore::before {
  background-color: var(--color-main);
  border-radius: 4px;
  bottom: -5px;
  content: "";
  height: 4px;
  left: 0;
  position: absolute;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 0.3s ease-in-out;
  width: 100%;
}

@media (prefers-reduced-motion: reduce) {
  .link-viewmore::before {
    transition: none;
  }
}

.link-viewmore:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.text-emphasize{
  color: var(--color-emphasize);
}

.svg-list {
  display: none;
}

.icon-inherit {
  fill: currentColor;
}

/* ==========================================================================
   Section: Header
   ========================================================================== */

/* Sous-section: Navbar
   ========================================================================== */

.navbar {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  height: 90px;
  margin-top: -8px;
  padding: 1rem 5rem;
  place-content: center center;
  position: fixed;
  transition: background .6s, height .3s;
  width: calc(100% - 16px);
  z-index: 100;
}

@media (prefers-reduced-motion: reduce) {
  .navbar {
    transition: none;
  }
}

@media screen and (min-width: 1200px) {
  .navbar {
    place-content: center space-between;
  }
}

.navbar[data-scrolled="true"] {
  background: var(--color-navbar-background);
  box-shadow: hsla(0, 0%, 39%, 0.15) 0px 2px 8px 0px;
  height: 60px;
}

.navbar__logo {
  filter: var(--invert-img-color);
}

.navbar__button-toggle {
  display: none;
}

/* Cas exceptionnel où on utilise max-width car ça permet d'écrire moins de css */
@media screen and (max-width: 1200px) {
  .navbar__button-toggle {
    background-color: transparent;
    background-image: var(--url-img-bars);
    background-repeat: no-repeat;
    border: 0;
    display: block;
    height: 2rem;
    position: absolute;
    right: 2rem;
    top: 1.5rem; 
    transition: top .3s ease-in-out;
    width: 2rem;
    z-index: 1000;
  }

  .navbar__button-toggle[aria-expanded="true"] {
    background-image: var(--url-img-close);
  }

  .navbar__button-toggle[data-scrolled="true"] {
    top: .75rem;
  }
}

.navbar__list {
  align-items: center;
  display: flex;
  gap: 2rem;
}

/* Cas exceptionnel où on utilise max-width car ça permet d'écrire moins de css */
@media screen and (max-width: 1200px) {
  .navbar__list {
    background: var(--color-navmobile-background);
    flex-direction: column;
    inset: 0 0 0 30%;
    padding: 5rem 2rem 0 2rem;
    position: fixed;
    transform: translateX(100%);
    transition: transform .3s ease-in-out;
  }

  .navbar__list[data-visible="true"] {
    transform: translateX(0);
  }
}

.navbar__list a {
  position: relative;
}

.navbar__list a::before {
  background-color: var(--color-main);
  border-radius: 4px;
  bottom: -5px;
  content: "";
  height: 4px;
  left: 0;
  position: absolute;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 0.3s ease-in-out;
  width: 100%;
}

@media (prefers-reduced-motion: reduce) {
  .navbar__list a::before {
    transition: none;
  }
}

.navbar__list a[data-emphasize="true"] {
  display: flex;
  align-items: center;
  gap: .4rem;
}

.navbar__list a:not([data-emphasize="true"]):hover::before{
  transform-origin: left;
  transform: scaleX(1);
}

.navbar__list > li:nth-child(3)::after {
  border-right: 1px solid var(--color-main);
  content: "";
  margin-left: 3rem;
}

.navbar__list--basket {
  background-color: var(--color-red-100);
  border-radius: var(--border-radius);
  color: var(--color-white);
  padding: .2rem 1rem;
  position: relative;
  transition: background .2s ease-in-out;
}

.navbar__list--basket::before {
  aspect-ratio: 1;
  background-color: var(--color-blue-100);
  border-radius: 50%;
  content: "0";
  display: block;
  font-size: .8rem;
  padding-top: .25rem;
  position: absolute;
  right: -.5rem;
  text-align: center;
  top: -.7rem;
  width: 1.5rem;
}

.navbar__list--basket:hover {
  background-color: var(--color-blue-100);
}

.navbar__list--basket > a:focus-visible {
  outline: 2px dashed var(--color-white);
}

@media screen and (max-width: 1200px) {
  .navbar__list > li:nth-child(3)::after {
    border-right: none;
    margin-left: 0;
  }
}

.navbar__list > li {
  list-style-type: none;
}
/* ... */

